tests/unit-fail-compilation/j016c.c.ref
j016c.c:7:7: error: Program requires the formation of a composite type from a variable length array type whose size is specified by an expression that is not evaluated (in an argument to sizeof).
  Undefined behavior (UB-TTE1). See C11 sec. 6.2.7:3, J.2:1 item 16
Translation failed (config dumped). Run kcc -d j016c.c to see commands run.
